# loginmanager

./: .gitignore  AdminRequestHandler.cpp  AdminRequestHandler.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  CryptoUtil.cpp  CryptoUtil.h  FileHandler.h  HTemplate.cpp  HTemplate.h  LoginRequestHandler.cpp  LoginRequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  StaticFileHandler.cpp  StaticFileHandler.h  UserManager.cpp  UserManager.h  WebServer.cpp  WebServer.h  config.ini  login_server.kdev4
.kdev4/: login_server.kdev4
config/: config.ini
templates/: admin.html
